--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,48 @@ body{
   font-family: 'Martel Sans', sans-serif;
 }
 
+/* ELEMENTS */
+
+.container{
+  margin:auto;
+  width:90%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.template{
+  margin: 20px 20px;
+  width: calc((100% / 4) - 40px);
+  height: 400px;
+  text-align: center;
+  cursor: pointer;
+  background-color: grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.template:hover .info-box,
+.template:hover .rating-box{
+  display:block;
+}
+
+.template:hover .poster-box{
+  display:none;
+}
+
+.poster{
+  width:100%;
+  height: 100%;
+}
+
+.info-box,
+.rating-box{
+  display:none;
+}
+
 /* TYPO */
 
 h1{
@@ -29,7 +71,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 28px
+  padding: 0px 34px
 }
 
 main{
