--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,8 @@ body{
   margin: 20px 20px;
   width: calc((100% / 4) - 40px);
   height: 400px;
-  text-align: center;
   cursor: pointer;
-  background-color: grey;
+  background-color: #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,6 +34,7 @@ body{
 .template:hover .info-box,
 .template:hover .rating-box{
   display:block;
+  padding: 10px;
 }
 
 .template:hover .poster-box{
@@ -53,6 +53,7 @@ body{
 .info-box,
 .rating-box{
   display:none;
+  text-align: justify;
 }
 
 /* TYPO */
@@ -61,11 +62,8 @@ h1{
   color: #E50914
 }
 
-h2{
-  color: white;
-}
-
-h3{
+p{
+  font-size: 10px;
   color: white;
 }
 
