Aggiornato sistema di voti; incluse le bandiere degli Stati
Ho sistemato il rating dei film, partendo da dov ero ma usando solo V-if per mostrare le stelle con fontawesome. L Html è più confusionario, ma in questo modo si possono usare le icone delle stelle e non gli asterischi. Per le bandiere ho trovato un sito che ricerca le bandiere in base al codice paese. Con v-bind le ho collegate alle lingue delle api, ma poiché il codice paese non corrisponde sempre con il codice lingua, ho dovuto mettere una condizione v-if extra almeno per la lingua inglese.

--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,18 @@ p{
 
 /* INPUT-ICONS-BUTTONS */
 
+i{
+  margin: 0px 1px;
+}
+
 input:focus{
   outline: none;
+}
+
+.flag{
+  display: inline;
+  margin: 0px 2px;
+  vertical-align: middle;
 }
 
 /* STRUCTURE */
